[tool.poetry]
name = "zarr-tests"
version = "0.1.0"
description = ""
authors = ["Simon Perkins <simon.perkins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zarr = "^3.0.1"
pytest = "^8.3.4"
icechunk = "^0.1.0a12"
xarray = "^2025.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
